tests/grammar/invalid/core-recovery-missing-rbrace-01.vit
entry main at core/app {
  let x = 1
  if x == 1 {
    give 0
  # missing closing brace for `if` and entry block

